# ever-crisis-gacha-simulator

./: .gitignore  Actual Development.ipynb  README.md  Untitled.ipynb  gacha_sim_development.ipynb  left_off.txt  pyproject.toml  requirements.txt
.github/: test_on_pr.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
analyses/: misc_analyses.ipynb  non_player_walkthrough.ipynb  standard_and_lb_banner_faqs.ipynb  zack_ff9_banner_sims.ipynb
gacha_sim_venv/: pyvenv.cfg
gacha_sim_venv/Scripts/: activate  activate.bat
src/: constants.py  gacha_sim.py
src/classes/: crystal_pull_session.py  stamp_card.py
src/ever_crisis_gacha_simulator/: banner_info_and_stamp_cards.py  constants.py  gacha_sim.py
src/ever_crisis_gacha_simulator/classes/: crystal_pull_session.py  gacha_sim.py  stamp_card.py  ten_draw.py
tests/unit_tests/: test_crystal_pull_session.py  test_ten_draw.py
